--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
  <body>
 <h1>laura's website</h1>
    	<p>I want a pet cat.</p>
+  <p><b>My favorite type of cats are maine coon cats. </b>, 
+	<u>They are really cute and fluffy.</u> 
+</p>
  </body>
 </html>
 
