--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <p><b>My favorite type of cats are maine coon cats. </b>, 
 	<u>They are really cute and fluffy.</u> 
 </p>
+	 <p><a href="https://www.google.com/search?q=cats&safe=strict&rlz=1C5CHFA_enUS865US865&sxsrf=ALeKk03Wv7nD-ACRUvuIgRPJReTUOw6uqg:1611693155386&source=lnms&tbm=isch&sa=X&ved=2ahUKEwj3s43wuLruAhULMVkFHTOvC_AQ_AUoAXoECAIQAw&biw=1440&bih=821">cats</a></p>
+
  </body>
 </html>
 
