--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<u>They are really cute and fluffy.</u> 
 </p>
 	 <p><a href="https://www.google.com/search?q=cats&safe=strict&rlz=1C5CHFA_enUS865US865&sxsrf=ALeKk03Wv7nD-ACRUvuIgRPJReTUOw6uqg:1611693155386&source=lnms&tbm=isch&sa=X&ved=2ahUKEwj3s43wuLruAhULMVkFHTOvC_AQ_AUoAXoECAIQAw&biw=1440&bih=821">cats</a></p>
+<p><img src="https://www.purina.co.uk/cat/purina-one/sites/default/files/2020-06/purina-one-cat-the-maine-coon-article-banner-1100x620px.jpg" alt="text" style="width:200px;height:200px;"></p>
 
  </body>
 </html>
